--- a/web/index.html
+++ b/web/index.html
@@ -18,29 +18,30 @@
 		<meta name="twitter:description" content="Your daily digest of AI developments powered by the AATF and Opus 4.5" />
 		<meta name="twitter:image" content="https://news.aatf.ai/assets/logo.png" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DiDeZSIl.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/2LLvpiIl.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/5C5LeKVa.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/PBrai9Hl.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.uwWN8Q1r.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BjX_Vhwg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BzDFUs6b.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C_nJ_a6M.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/OQEvwCBF.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CTjJCm81.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CnzC5TrW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Bzak7iHL.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BBkwx5ge.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B0aC0BN5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BV4OOpPn.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DDsfhRqX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CQoL5VKU.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Bug8TnJv.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-trend-gray-100 dark:bg-trend-dark text-trend-dark dark:text-trend-gray-100">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1x3tqqj = {
+					__sveltekit_1o3fpss = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DiDeZSIl.js"),
-						import("/_app/immutable/entry/app.uwWN8Q1r.js")
+						import("/_app/immutable/entry/start.BjX_Vhwg.js"),
+						import("/_app/immutable/entry/app.CnzC5TrW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
