fix: update GitHub links to flyryan repo and add GitHub icon to header

--- a/web/index.html
+++ b/web/index.html
@@ -18,12 +18,12 @@
 		<meta name="twitter:description" content="Your daily digest of AI developments powered by the AATF and Opus 4.5" />
 		<meta name="twitter:image" content="https://news.aatf.ai/assets/logo.png" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BjX_Vhwg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BzDFUs6b.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.B9zss_UQ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CMvYPInm.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C_nJ_a6M.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/OQEvwCBF.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CTjJCm81.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CnzC5TrW.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DBfPSjYo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Bzak7iHL.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DDsfhRqX.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CQoL5VKU.js">
@@ -33,15 +33,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1o3fpss = {
+					__sveltekit_1khxhxv = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BjX_Vhwg.js"),
-						import("/_app/immutable/entry/app.CnzC5TrW.js")
+						import("/_app/immutable/entry/start.B9zss_UQ.js"),
+						import("/_app/immutable/entry/app.DBfPSjYo.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
